<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="mainActivityTitle">My NanoDegree Apps!</string>
    <string name="firstButtonTitle">SPOTIFY STREAMER</string>
    <string name="secondButtonTitle">SCORES APP</string>
    <string name="thirdButtonTitle">LIBRARY APP</string>
    <string name="fourthButtonTitle">BUILD IT BIGGER</string>
    <string name="fifthButtonTitle">XYZ READER</string>
    <string name="sixthButtonTitle">CAPSTONE: MY OWN APP</string>


    <string name="action_settings">Settings</string>
</resources>
