<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/mainActivityTitle" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#FF0530F0"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstButtonTitle"
        android:id="@+id/spotifyButton"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:onClick="displayMessage"
        android:layout_marginTop="100px"
        android:minWidth="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondButtonTitle"
        android:id="@+id/scoreAppButton"
        android:layout_below="@+id/spotifyButton"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:onClick="displayMessage"
        android:layout_marginTop="20px"
        android:minWidth="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirdButtonTitle"
        android:id="@+id/libraryAppButton"
        android:background="#F08C35"
        android:layout_below="@+id/scoreAppButton"
        android:layout_centerHorizontal="true"
        android:onClick="displayMessage"
        android:layout_marginTop="20px"
        android:minWidth="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourthButtonTitle"
        android:id="@+id/buildBiggerButton"
        android:background="#F08C35"
        android:layout_centerVertical="true"
        android:layout_below="@+id/libraryAppButton"
        android:layout_centerHorizontal="true"
        android:onClick="displayMessage"
        android:layout_marginTop="20px"
        android:minWidth="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifthButtonTitle"
        android:id="@+id/xyzReaderButton"
        android:background="#F08C35"
        android:layout_below="@+id/buildBiggerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:onClick="displayMessage"
        android:layout_marginTop="20px"
        android:minWidth="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sixthButtonTitle"
        android:id="@+id/capstoneButton"
        android:layout_below="@+id/xyzReaderButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:onClick="displayMessage"
        android:background="#FFF01704"
        android:minWidth="200dp" />
</RelativeLayout>
